prepared three different models

--- a/progress_notebook.ipynb
+++ b/progress_notebook.ipynb
@@ -527,7 +527,8 @@
    "metadata": {},
    "source": [
     "* Train-Test split to train the model and test it.\n",
-    "* Basic linear regression with two different "
+    "* Basic linear regression and two different regularized regressions - Ridge and Lasso Regression.\n",
+    "* MSE, RMSE, MAE for evaluation of models"
    ]
   },
   {
@@ -543,30 +544,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = customers[['Avg. Session Length', 'Time on App','Time on Website', 'Length of Membership']]\n",
+    "y = customers['Yearly Amount Spent']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-b18772b47e12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlinear\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     "data": {
+      "text/plain": [
+       "Lasso(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=1000,\n",
+       "   normalize=False, positive=False, precompute=False, random_state=None,\n",
+       "   selection='cyclic', tol=0.0001, warm_start=False)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear.fit(X_train,y_train)\n",
+    "ridge.fit(X_train,y_train)\n",
+    "lasso.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's check that which predictors have significant effect on the prediction.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients for Linear Regression: \n",
+      " [25.98154972 38.59015875  0.19040528 61.27909654]\n",
+      "Coefficients for Ridge Regression: \n",
+      " [25.90520654 38.46858904  0.1943649  61.10418198]\n",
+      "Coefficients for Lasso Regression: \n",
+      " [24.94983528 37.46417924  0.         60.29628335]\n"
      ]
     }
    ],
    "source": [
-    "linear.fit(X_train,y_train)"
+    "print('Coefficients for Linear Regression: \\n', linear.coef_)\n",
+    "print('Coefficients for Ridge Regression: \\n', ridge.coef_)\n",
+    "print('Coefficients for Lasso Regression: \\n', lasso.coef_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interesting.\n",
+    "Time on website has very minimal to no effect on yearly amount spent.\n",
+    "\n",
+    "* idea 2: it would be interesting to find out customer behaviors with shopping website.\n",
+    "\n",
+    "Predictors in the order of importances are:\n",
+    "\n",
+    "1. Length of Membership\n",
+    "2. Time on App\n",
+    "3. Average Session Length\n",
+    "\n",
+    "\n",
+    "* idea 3: Explore methods to improve user experience with app \n",
+    "* idea 4: longer the session length, likely to spend more money"
    ]
   },
   {
